<resources>
    <string name="app_name">DecorSense</string>
    <string name="title_browse">Browse</string>
    <string name="title_scan">Scan</string>
    <string name="title_user">User</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="sortings_array">
        <item>Top Sellers</item>
        <item>Price Low to High</item>
        <item>Price High to Low</item>
        <item>Top Rated</item>
    </string-array>

</resources>